--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
+  </head>
 <body>
     <div class="login-box">
         <h2>Inicio De Sessão</h2>
@@ -39,5 +40,20 @@
           
         </form>
       </div>
+      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script>
+        
+        Swal.fire({
+  title: 'Oi!, Sou o Silas Junior',
+  text: 'e estou aprendendo a fazer um site de login',
+  imageUrl: 'https://telegra.ph/file/0c7109fef919d385e36a4.jpg',
+  imageWidth: 200,
+  imageHeight: 200,
+  imageAlt: 'Custom image',
+  footer: '<a href="">exemplo</a>'
+})
+        </script>
+
+</script>
 </body>
 </html>
