--- a/index.html
+++ b/index.html
@@ -42,18 +42,15 @@
       </div>
       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script>
-        
         Swal.fire({
-  title: 'Oi!, Sou o Silas Junior',
-  text: 'e estou aprendendo a fazer um site de login',
+  title: 'Bem Vindo(a) ao meu site',
+  text: 'Sou o Silas, e estou aprendendo a fazer um site de login :)',
   imageUrl: 'https://telegra.ph/file/0c7109fef919d385e36a4.jpg',
   imageWidth: 200,
   imageHeight: 200,
   imageAlt: 'Custom image',
-  footer: '<a href="">exemplo</a>'
+  footer: 'copright by‎ ‎ ‎  <a href="">©SilasJr-dev </a>'
 })
         </script>
-
-</script>
 </body>
 </html>
