--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
   </head>
 <body>
     <div class="login-box">
@@ -30,7 +29,7 @@
             Entrar
           </a>
 
-          <a href="login.html" id="cad2">
+          <a href="cadastro.html" id="cad2">
             <span></span>
             <span></span>
             <span></span>
@@ -42,15 +41,15 @@
       </div>
       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script>
-        Swal.fire({
+Swal.fire({
   title: 'Bem Vindo(a) ao meu site',
   text: 'Sou o Silas, e estou aprendendo a fazer um site de login :)',
   imageUrl: 'https://telegra.ph/file/0c7109fef919d385e36a4.jpg',
   imageWidth: 200,
   imageHeight: 200,
-  imageAlt: 'Custom image',
-  footer: 'copright by‎ ‎ ‎  <a href="">©SilasJr-dev </a>'
+  footer: 'copright by‎ ‎  <a href="https://github.com/SilasJr-dev" target="_blank" id="copy">©SilasJr-dev </a>'
 })
         </script>
+        
 </body>
 </html>
